feat: Implement role-based attendance system with QR scanning and manual entry
- Add multi-role QR code scanning for Employee, HR, and Admin
- Implement role-based attendance UI with employee restrictions
- Add manual check-in and simulate scan functionality for all roles
- Enforce one attendance per day per user via backend validation
- Create role-specific dashboards post-attendance for HR/Admin
- Add forgot password and reset password functionality
- Enhance security configuration and authentication flows
- Implement notification service for attendance alerts
- Add storage utility for secure auth state management
- Update employee, user, and role entities with attendance tracking
- Improve UI/UX with role-based navigation and status indicators

All roles (Employee, HR, Admin) can scan QR codes, enter IDs manually, or simulate scans for testing.